--- a/test/test.html
+++ b/test/test.html
@@ -3,7 +3,7 @@
     <title>Annotorious Hello World Plugin</title>
     <link rel="stylesheet" href="http://annotorious.github.com/latest/annotorious.css" type="text/css" />
     <script src="http://annotorious.github.com/latest/annotorious.min.js"></script>
-    <script src="jquery-1.9.0.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="../src/anno-elasticsearch-plugin.js"></script>
     <script>
       anno.addPlugin('ElasticSearch', { base_url: 'http://62.218.164.156/annotations/' });
