--- a/test/test.html
+++ b/test/test.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Annotorious Hello World Plugin</title>
+    <title>Annotorious ElasticSearch Plugin Test Page</title>
     <link rel="stylesheet" href="http://annotorious.github.com/latest/annotorious.css" type="text/css" />
     <script src="http://annotorious.github.com/latest/annotorious.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
