Added a 'load indicator' spinner icon

--- a/test/test.html
+++ b/test/test.html
@@ -2,6 +2,7 @@
   <head>
     <title>Annotorious ElasticSearch Plugin Test Page</title>
     <link rel="stylesheet" href="http://annotorious.github.com/latest/annotorious.css" type="text/css" />
+    <link rel="stylesheet" href="../anno-elasticsearch-plugin.css" type="text/css" />
     <script src="http://annotorious.github.com/latest/annotorious.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="../anno-elasticsearch-plugin.js"></script>
