--- a/test/test.html
+++ b/test/test.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Annotorious ElasticSearch Plugin Test Page</title>
-    <link rel="stylesheet" href="http://annotorious.github.com/latest/annotorious.css" type="text/css" />
+    <link rel="stylesheet" href="https://annotorious.github.com/latest/annotorious.css" type="text/css" />
     <link rel="stylesheet" href="../anno-elasticsearch-plugin.css" type="text/css" />
-    <script src="http://annotorious.github.com/latest/annotorious.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://annotorious.github.com/latest/annotorious.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="../anno-elasticsearch-plugin.js"></script>
     <script>
       anno.addPlugin('ElasticSearch', { base_url: 'http://62.218.164.156/annotations/' });
@@ -23,7 +23,7 @@
       <img src="640px-Hallstatt.jpg" class="annotatable">
       <p class="image-caption">
         Hallstatt, Austria. By Nick Csakany, 2007. Public Domain. Source:
-        <a href="http://commons.wikimedia.org/wiki/File:Hallstatt_300.jpg">Wikimedia Commons</a>          
+        <a href="https://commons.wikimedia.org/wiki/File:Hallstatt_300.jpg">Wikimedia Commons</a>          
       </p>
     </div>
     <p>
