--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="../anno-elasticsearch-plugin.js"></script>
     <script>
-      anno.addPlugin('ElasticSearch', { base_url: 'http://62.218.164.156/annotations/' });
+      anno.addPlugin('ElasticSearch', { base_url: 'http://localhost:9200', index_name:'annotation' });
     </script>
     <style>
       .image-caption {
